--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "stylelint-config-standard": "^37.0.0"
     },
     "dependencies": {
-        "live-server": "^1.2.2",
-        "sass": "^1.86.3"
+        "live-server": "^1.2.0",
+        "sass": "^1.86.3",
+        "socket.io-client": "^4.8.1"
     }
 }
